# droidhose

./: .gitignore  LICENSE  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  camera_stream.cpp
receiver/: network_latency_test.py  receiver.py  video_processing_latency_test.py
